--- a/fyncol-server/package.json
+++ b/fyncol-server/package.json
@@ -20,6 +20,10 @@
     "mysql2": "^3.17.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.2.3",
     "nodemon": "^3.1.11",
     "prisma": "^5.10.2"
   }
