--- a/fyncol-server/package.json
+++ b/fyncol-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && nsc",
+    "build": "npx prisma generate && tsc",
   "start": "node dist/index.js"
 
   },
