--- a/fyncol-server/tsconfig.json
+++ b/fyncol-server/tsconfig.json
@@ -2,20 +2,16 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "node", // Asegura que TS encuentre tus paquetes correctamente
+    "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true, // Te permite importar archivos .json si los necesitas
-    "sourceMap": true, // Útil para debugear errores en Render viendo el código original .ts
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*"]
-    }
+    "resolveJsonModule": true,
+    "sourceMap": true
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist"] // Excluye la carpeta de salida para evitar bucles
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
