--- a/fyncol-server/package.json
+++ b/fyncol-server/package.json
@@ -2,17 +2,16 @@
   "name": "fyncol-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-     "build": "tsc",
+    "postinstall": "prisma generate",
+    "build": "tsc",
     "start": "node dist/index.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^3.0.3",
@@ -29,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.3",
     "nodemon": "^3.1.11",
-    "prisma": "^5.10.2"
+    "prisma": "^5.10.2",
+    "typescript": "^5.6.3"
   }
 }
